# duckdb-msolap-extension

./: .gitignore  CMakeLists.txt  Makefile  extension_config.cmake  main.cpp
.github/workflows/: MainDistributionPipeline.yml
docs/: README.md
src/: msolap_connection.cpp  msolap_db.cpp  msolap_extension.cpp  msolap_extension_nowin.cpp  msolap_scanner.cpp  msolap_stmt.cpp  msolap_utils.cpp
src/include/: msolap_connection.hpp  msolap_db.hpp  msolap_extension.hpp  msolap_guids.h  msolap_scanner.hpp  msolap_stmt.hpp  msolap_utils.hpp
test/: README.md
test/sql/: msolap_table_constructor.test
